--- a/config/corne.conf
+++ b/config/corne.conf
@@ -6,6 +6,9 @@ CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
 CONFIG_BT_CTLR_TX_PWR_PLUS_8=y
+CONFIG_BT_PERIPHERAL_PREF_MIN_CONN_INTERVAL=6
+CONFIG_BT_PERIPHERAL_PREF_MAX_CONN_INTERVAL=12
+CONFIG_BT_PERIPHERAL_PREF_LATENCY=0
 
 # Uncomment this line below to add rgb underglow / backlight support
 CONFIG_ZMK_RGB_UNDERGLOW=y
