--- a/config/sofle.conf
+++ b/config/sofle.conf
@@ -5,6 +5,7 @@
 CONFIG_ZMK_DISPLAY=y
 CONFIG_ZMK_DISPLAY_STATUS_SCREEN_CUSTOM=y
 CONFIG_ZMK_BLE_EXPERIMENTAL_CONN=y
+CONFIG_BT_CTLR_PHY_2M=n
 
 
 # Uncomment these two lines to add support for encoders
